--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
     "node-cron": "^3.0.2",
+    "node-rest-client": "^3.1.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   }
