--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "crm",
   "version": "1.0.0",
-  "description": "This is my customer resource management app",
+  "description": "This is my customer resource management application",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --testEnvironment=node --runInBand --detectOpenHandles --coverage ./tests"
   },
   "author": "Er Nitesh",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.10.2",
     "mongoose": "^6.8.0",
     "node-cron": "^3.0.2",
     "node-rest-client": "^3.1.1",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
