--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
+     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
     "mongodb-memory-server": "^8.10.2",
     "mongoose": "^6.8.0",
